--- a/LibraryManager/pom.xml
+++ b/LibraryManager/pom.xml
@@ -211,6 +211,11 @@
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.richfaces</groupId>
+            <artifactId>richfaces</artifactId>
+            <version>4.5.17.Final</version>
+        </dependency>
 
     </dependencies>
 
